# avalon

./: .dockerignore  .env.example  .gitignore  AGENT_DAILY_STATS_IMPLEMENTATION.md  AGENT_GREETING_FEATURE.md  AGENT_INTERVIEW_IMPLEMENTATION.md  AGENT_PAGE_FIX_SUMMARY.md  AGENT_PRICE_FIELD_IMPLEMENTATION.md  AGENT_PUBLISH_FEATURE.md  AGENT_PUBLISH_IMPLEMENTATION_SUMMARY.md  AGENT_STATS_BACKEND_IMPLEMENTATION.md  AGENT_STATS_IMPLEMENTATION.md  AGENT_STATS_SUMMARY.md  AGENT_TABS_FEATURE.md  AGENT_TUNE_IMPLEMENTATION.md  AGENT_USAGE_STATS_IMPLEMENTATION.md  ANSWER_NODE_CHECKLIST.md  ANSWER_NODE_IMPLEMENTATION.md  ANSWER_NODE_VERIFICATION.md  AVATAR_UPLOAD_IMPLEMENTATION.md  CHANGELOG_CHAT_FEATURE.md  CHANGELOG_FILE_UPLOAD.md  CHANGES_SUMMARY.md  CHAT_IMPROVEMENTS_SUMMARY.md  CHAT_SERVICE_IMPLEMENTATION.md  CHAT_SERVICE_USAGE.md  CHAT_TYPEWRITER_FEATURE.md  CHAT_UI_PREVIEW.md  COMPLETION_CHECKLIST.md  Cargo.toml  DASHBOARD_STATS_IMPLEMENTATION.md  DEBUG_NO_REASONING_DISPLAY.md  DEBUG_REASONING_CONTENT.md  Dockerfile  FILE_UPLOAD_IMPLEMENTATION.md  FILE_UPLOAD_OSS_IMPLEMENTATION.md  FRONTEND_INTEGRATION_EXAMPLE.md  FRONTEND_PUBLISH_INTEGRATION.md  GREETING_FEATURE_SUMMARY.md  GREETING_UI_GUIDE.md  (+42 more)
config/: default.yaml
docs/: AI_AGENT_SECURITY_GUIDE.md  adding_routes.md  agent_daily_stats_schema.sql  agent_stats_quickstart.md  agent_stats_usage_guide.md  answer_node_guide.md  answer_node_quick_reference.md  api_documentation.md  cors_configuration.md  cors_setup_summary.md  deployment_guide.md  end_node_outputs.md  execution_engine_implementation.md  file_upload_api.md  file_upload_feature.md  file_upload_implementation_summary.md  file_upload_quickstart.md  flow_execution_with_variables.md  flow_start_node_parameters.md  flow_test_page_guide.md  iteration_node_guide.md  iteration_node_quick_reference.md  iteration_node_quick_reference_zh.md  llm_node_text_variable.md  mcp_tool_edit_verification.md  mcp_tools_guide.md  mcp_tools_migration_guide.md  mcp_tools_quick_reference.md  pagination_guide.md  parameter_extractor_node_guide.md  parameter_extractor_quick_reference.md  parameter_extractor_quick_reference_zh.md  routes_integration_summary.md  routes_status.md  rust_llm_integration_guide.md  testing_guide.md  troubleshooting.md  user_guide.md  vector_embeddings_guide.md
docs/api/: agent_publish.md
docs/examples/: README.md  answer_node_example.json  complete_flow_example.json  flow_with_input_override.json  llm_chaining_example.json  parameter_extractor_example.json  parameter_extractor_multi_input_example.json
examples/: agent_daily_stats_usage.rs  sse_chat_example.html
frontend/: AGENT_FEATURE.md  AgentPublishButton.tsx  CHAT_COMPONENTS_README.md  CHAT_DOCS_INDEX.md  CHAT_INTEGRATION_EXAMPLES.md  CHAT_UI_DESIGN.md  Dockerfile  I18N_DEMO.md  I18N_GUIDE.md  I18N_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_TESTING.md  MOBILE_CHAT_COMPONENT.md  MOBILE_CHAT_SUMMARY.md  QUICK_START_CHAT.md  QUICK_START_I18N.md  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  router.tsx
k8s/: deployment.yaml
scripts/: backup-database.sh  init-db.sql  restore-database.sh  test_file_upload.sh
src/: lib.rs  main.rs
src/application/: mod.rs
src/config/: mod.rs
src/domain/: mod.rs
src/error/: mod.rs
tests/: agent_integration_tests.rs  agent_stats_integration_test.rs  api_integration_tests.rs  api_key_integration_tests.rs  iteration_node_test.rs  mcp_tool_enhancements_integration_tests.rs  pagination_integration_tests.rs  performance_tests.rs
(+332 files in other folders)
