[package]
name = "agent-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
# Env
dotenvy = "0.15"

# Web framework
axum = "0.8.5"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1.0"

# Database and ORM
sea-orm = { version = "1.1.17", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print"] }
sea-orm-migration = "1.1.17"

# Redis
redis = { version = "0.21", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"

# Error handling
thiserror = "1.0"

# Async traits
async-trait = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.0"

# Configuration
config = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.3"

# Random number generation
rand = "0.8"

# Regular expressions
regex = "1.10"

# URL encoding
percent-encoding = "2.3"

# Template engine
handlebars = "5.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tower = { version = "0.5", features = ["util"] }
sea-orm = { version = "1.1.17", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "mock"] }

[[bin]]
name = "agent-platform"
path = "src/main.rs"