[package]
name = "agent-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
# Env
dotenvy = "0.15"

# Web framework
axum = { version = "0.8.5", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
http = "1.0"

# Database and ORM
sea-orm = { version = "1.1.17", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print"] }
sea-orm-migration = "1.1.17"

# Redis
redis = { version = "0.21", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"

# Decimal numbers
rust_decimal = { version = "1.33", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Async traits
async-trait = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", default_features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1.0"

# Configuration
config = "0.13"

# Logging
log = "0.4"
tklog = "0.3.0"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.3"

# Random number generation
rand = "0.8"

# Cryptography
ring = "0.17"
sha2 = "0.10"
base64 = "0.22"

# Regular expressions
regex = "1.10"

# URL encoding
percent-encoding = "2.3"

# Template engine
handlebars = "5.1"

# MCP
rmcp = { version = "0.8.0", features = [
    "server",
    "macros",
    "client",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }

# Aliyun
aliyun-oss-client = "0.11"
alibaba-cloud-sdk-rust = "0.1.11"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tower = { version = "0.5", features = ["util"] }
sea-orm = { version = "1.1.17", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "mock"] }

[[bin]]
name = "agent-platform"
path = "src/main.rs"